pkg/html/pages: fix menu
After the recent changes, the nested menu covers the main manu.
These lines fix the alignment.

--- a/pkg/html/pages/style.css
+++ b/pkg/html/pages/style.css
@@ -519,6 +519,9 @@ aside {
 	position: absolute;
 	background-color: #f1f1f1;
 	z-index: 1;
+	top: 100%;
+	left: 0;
+	margin-top: 1px;
 }
 
 /* Links inside the dropdown */
